.deploy/ui-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ui-ingress
  namespace: baseball
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: baseball.schultz.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ui
                port:
                  number: 8080
